<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main"
    tools:context=".main">

    <TextView
        android:id="@+id/tvLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/white"
        android:text="@string/label"
        android:textSize="@dimen/title4"
        android:fontFamily="@font/letters_for_learners"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <EditText
        android:id="@+id/etNameInput"
        android:hint="@string/nameInput"
        android:layout_width="@dimen/title5"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/grey_white"
        android:importantForAutofill="no"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/grey_white"
        android:fontFamily="@font/letters_for_learners"
        android:textSize="@dimen/title4_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/etLastName"
        android:hint="@string/lastNameInput"
        android:layout_width="@dimen/title5"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/grey_white"
        android:importantForAutofill="no"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/grey_white"
        android:fontFamily="@font/letters_for_learners"
        android:textSize="@dimen/title4_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35"
        tools:ignore="MissingConstraints"  />

    <EditText
        android:id="@+id/etDate"
        android:hint="@string/dateInput"
        android:layout_width="@dimen/title5"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/grey_white"
        android:importantForAutofill="no"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/grey_white"
        android:focusable="false"
        android:onClick="mostrarDatePicker"
        android:inputType="date"
        android:fontFamily="@font/letters_for_learners"
        android:textSize="@dimen/title4_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/etEmail"
        android:hint="@string/emailInput"
        android:autofillHints="emailAddress"
        android:layout_width="@dimen/title5"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/grey_white"
        android:importantForAutofill="no"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/grey_white"
        android:inputType="textEmailAddress"
        android:fontFamily="@font/letters_for_learners"
        android:textSize="@dimen/title4_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.55"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/etNoCuenta"
        android:hint="@string/noCuentaInput"
        android:layout_width="@dimen/title5"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/grey_white"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/grey_white"
        android:inputType="number"
        android:fontFamily="@font/letters_for_learners"
        android:textSize="@dimen/title4_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65"
        tools:ignore="MissingConstraints" />

    <Spinner
        android:id="@+id/spCareers"
        android:layout_width="@dimen/title5"
        android:layout_height="40dp"
        android:backgroundTint="@color/grey_white"
        android:fontFamily="@font/letters_for_learners"
        android:foregroundTint="@color/grey_white"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="@color/grey_white"
        android:contentDescription="@string/careersSelect"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnMain"
        android:layout_width="131dp"
        android:layout_height="54dp"
        android:backgroundTint="@color/grey_white"
        android:fontFamily="@font/letters_for_learners"
        android:onClick="click"
        android:text="@string/btnButton"
        android:textSize="@dimen/title4_1"
        android:textColor="@color/black"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

</androidx.constraintlayout.widget.ConstraintLayout>