<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_home"
    tools:context=".home">

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/harry_p"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/color1"
        android:textSize="@dimen/title6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.075" />

    <TextView
        android:id="@+id/tvNameUser"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:text="@string/tvNameUser"
        android:textAlignment="center"
        android:textColor="@color/color2"
        android:textSize="@dimen/title7"
        android:fontFamily="@font/letters_for_learners"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19" />

    <TextView
        android:id="@+id/tvNameUserResult"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/color1"
        android:textSize="@dimen/title8"
        android:fontFamily="@font/letters_for_learners"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNameUser"
        app:layout_constraintVertical_bias="0.22" />

    <TextView
        android:id="@+id/tvAgeUser"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:text="@string/tvAgeUser"
        android:textAlignment="center"
        android:textColor="@color/color2"
        android:textSize="@dimen/title7"
        android:fontFamily="@font/letters_for_learners"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNameUserResult"
        app:layout_constraintVertical_bias="0.28" />

    <TextView
        android:id="@+id/tvAgeUserResult"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/color1"
        android:textSize="@dimen/title8"
        android:fontFamily="@font/letters_for_learners"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAgeUser"
        app:layout_constraintVertical_bias="0.31" />

    <TextView
        android:id="@+id/tvZodiacalUser"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:text="@string/tvZodiacalUser"
        android:textAlignment="center"
        android:textColor="@color/color2"
        android:textSize="@dimen/title7"
        android:fontFamily="@font/letters_for_learners"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAgeUserResult"
        app:layout_constraintVertical_bias="0.37" />

    <TextView
        android:id="@+id/tvZodiacalUserResult"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/color1"
        android:textSize="@dimen/title8"
        android:fontFamily="@font/letters_for_learners"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvZodiacalUser"
        app:layout_constraintVertical_bias="0.4" />

    <TextView
        android:id="@+id/tvChineseUser"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:text="@string/tvChineseUser"
        android:textAlignment="center"
        android:textColor="@color/color2"
        android:textSize="@dimen/title7"
        android:fontFamily="@font/letters_for_learners"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvZodiacalUserResult"
        app:layout_constraintVertical_bias="0.46" />

    <TextView
        android:id="@+id/tvChineseUserResult"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/color1"
        android:textSize="@dimen/title8"
        android:fontFamily="@font/letters_for_learners"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvChineseUser"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.49" />

    <TextView
        android:id="@+id/tvEmailUser"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:text="@string/tvEmailUser"
        android:textAlignment="center"
        android:textColor="@color/color2"
        android:textSize="@dimen/title7"
        android:fontFamily="@font/letters_for_learners"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvChineseUserResult"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.55" />

    <TextView
        android:id="@+id/tvEmailUserResult"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/color1"
        android:textSize="@dimen/title8"
        android:fontFamily="@font/letters_for_learners"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEmailUser"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.58" />

    <TextView
        android:id="@+id/tvNoCuentaUser"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:text="@string/tvNoCuentaUser"
        android:textAlignment="center"
        android:textColor="@color/color2"
        android:textSize="@dimen/title7"
        android:fontFamily="@font/letters_for_learners"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEmailUserResult"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.64" />

    <TextView
        android:id="@+id/tvNoCuentaUserResult"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/color1"
        android:textSize="@dimen/title8"
        android:fontFamily="@font/letters_for_learners"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNoCuentaUser"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.68" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="211dp"
        android:layout_height="168dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9"
        app:srcCompat="@drawable/ing_aeroespacial" />

</androidx.constraintlayout.widget.ConstraintLayout>